<resources>
    <string name="app_name">TungPat</string>
    <string name="mulai">Mulai!</string>
    <string name="_0_0">0/0</string>
    <string name="_10s">10s</string>
    <string name="_0s">0s</string>
    <string name="correct">Benar!</string>
    <string name="wrong">Salah!</string>
    <string name="plus">%1$d + %2$d</string>
    <string name="substract">%1$d - %2$d</string>
    <string name="multiply">%1$d * %2$d</string>
    <string name="divide">%1$d / %2$d</string>
    <string name="results">%1$d / %2$d</string>
    <string name="final_score">Your score: %1$d/%2$d</string>
    <string name="timer">%1$d s"</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="addition">+</string>
    <string name="substraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="main_menu">Menu Utama</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">retry</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alecrt_dialog_ok">Save</string>
    <string name="alert_dialog_text_entry">do you want to save on database?</string>
    <string name="enter_your_name">Enter your name</string>
</resources>